--- a/figma1.html
+++ b/figma1.html
@@ -454,7 +454,8 @@
 
     <div class="popular_cards">
 
-        <div class="popular_card">
+
+        <div class="popular_card new">
 
             <img src="img/circle%20sec-.png" alt="">
 
@@ -508,7 +509,7 @@
                 </li>
 
                 <li class="features-item">
-                    <img class="features-item_icon" src="img/circle.png" alt="">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
                     <p class="features_item-text">
                         Unlimited product updates
                     </p>
@@ -516,7 +517,157 @@
 
             </ul>
 
+            <div class="new_item">
+                <p>
+                    New
+                </p>
+            </div>
+
         </div>
+
+        <div class="popular_card new">
+
+            <img src="img/circle%20sec-.png" alt="">
+
+            <p class="popular_free">
+                FREE
+            </p>
+
+
+            <p class="popular_card-text">
+                Organize across all apps by
+                hand
+            </p>
+
+
+            <p class="popular_card-price">
+                19$
+            </p>
+
+
+            <p class="popular_card-month">
+                Per Month
+            </p>
+
+
+            <p class="popular_card-text2">
+                Slate helps you see how
+                many more days you need...
+            </p>
+
+
+
+            <button class="popular_card-button">
+                Try for free
+
+            </button>
+
+            <ul class="features-list">
+
+                <li class="features-item">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
+                    <p class="features_item-text">
+                        Unlimited product updates
+                    </p>
+                </li>
+
+                <li class="features-item">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
+                    <p class="features_item-text">
+                        Unlimited product updates
+                    </p>
+                </li>
+
+                <li class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        Unlimited product updates
+                    </p>
+                </li>
+
+            </ul>
+
+            <div class="new_item">
+                <p>
+                    New
+                </p>
+            </div>
+
+
+        </div>
+
+        <div class="popular_card new">
+
+            <img src="img/circle%20sec-.png" alt="">
+
+            <p class="popular_free">
+                FREE
+            </p>
+
+
+            <p class="popular_card-text">
+                Organize across all apps by
+                hand
+            </p>
+
+
+            <p class="popular_card-price">
+                19$
+            </p>
+
+
+            <p class="popular_card-month">
+                Per Month
+            </p>
+
+
+            <p class="popular_card-text2">
+                Slate helps you see how
+                many more days you need...
+            </p>
+
+
+
+            <button class="popular_card-button">
+                Try for free
+
+            </button>
+
+            <ul class="features-list">
+
+                <li class="features-item">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
+                    <p class="features_item-text">
+                        Unlimited product updates
+                    </p>
+                </li>
+
+                <li class="features-item">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
+                    <p class="features_item-text">
+                        Unlimited product updates
+                    </p>
+                </li>
+
+                <li class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        Unlimited product updates
+                    </p>
+                </li>
+
+            </ul>
+
+            <div class="new_item">
+                <p>
+                    New
+                </p>
+            </div>
+
+
+        </div>
+
+
 
 
     </div>
