--- a/figma1.html
+++ b/figma1.html
@@ -85,9 +85,9 @@
 
             <div class="header_blog">
                 <div class="header_blog-icon">
-                    <img src="img/icon%20cool-icon-n2.svg " alt="">
+                    <img src="img/009-backpack-1.png " alt="">
                 </div>
-                <h3 class="geader_blog-title">Lifetime access</h3>
+                <h3 class="geader_blog-title">training Courses</h3>
                 <div class="line"></div>
                 <p class="header_blog-text">
                     The gradual accumulation of
@@ -99,9 +99,9 @@
 
             <div class="header_blog">
                 <div class="header_blog-icon">
-                    <img src="img/icon%20cool-icon-n2.svg " alt="">
+                    <img src="img/icon%20cool-icon-n23.svg " alt="">
                 </div>
-                <h3 class="geader_blog-title">Lifetime access</h3>
+                <h3 class="geader_blog-title">Expert instruction</h3>
                 <div class="line"></div>
                 <p class="header_blog-text">
                     The gradual accumulation of
@@ -154,6 +154,7 @@
 
 
 </section>
+
 <section class="education">
 
     <div class="container">
@@ -237,7 +238,7 @@
 
             <div class="education_item">
                 <div class="item_top">
-                    <img src="img/product-cover-133%20sec-.png" alt=""/>
+                    <img src="img/product-cover-131.png" alt=""/>
                     <div class="item_buttons">
 
                         <div class="item_icon">
@@ -302,7 +303,7 @@
 
             <div class="education_item">
                 <div class="item_top">
-                    <img src="img/product-cover-133%20sec-.png" alt=""/>
+                    <img src="img/product-cover-130%20sec-.png" alt=""/>
                     <div class="item_buttons">
 
                         <div class="item_icon">
@@ -367,7 +368,7 @@
 
             <div class="education_item">
                 <div class="item_top">
-                    <img src="img/product-cover-133%20sec-.png" alt=""/>
+                    <img src="img/product-cover-132%20sec-.png" alt=""/>
                     <div class="item_buttons">
 
                         <div class="item_icon">
@@ -435,10 +436,6 @@
         </div>
 
 </section>
-
-
-
-
 
 <section class="popular">
 
@@ -667,9 +664,6 @@
 
         </div>
 
-
-
-
     </div>
 
 
@@ -677,6 +671,308 @@
 
 </section>
 
+<section class="testimonials">
+
+
+    <div class="container">
+
+        <div class="our">
+            <h6 class="our_text">
+                Testimonials
+            </h6>
+            <h1 class="our_text2">
+                Our Popular Courses
+            </h1>
+            <p class="our_text3">
+                Problems trying to resolve the conflict between
+                the two major realms of Classical physics: Newtonian mechanics
+            </p>
+
+        </div>
+
+        <div class="rasmlar">
+
+            <div class="birinchi">
+
+                <img class="odam" src="img/testimonial-user-cover-1.png" alt="">
+
+                <p class="rasmlar_text">
+                    Problems trying to resolve the conflict between
+                    the two major realms of Classical physics: Newtonian mechanics
+                </p>
+                <div class="yulduz">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/_bosh.png" alt="">
+                </div>
+
+                <h5 class="miles">
+                    Regina Miles
+                </h5>
+
+                <H5 class="desinger">
+                    Designer
+                </H5>
+
+            </div>
+
+
+            <div class="birinchi">
+
+                <img class="odam" src="img/testimonial-user-cover-2.png" alt="">
+
+                <p class="rasmlar_text">
+                    Problems trying to resolve the conflict between
+                    the two major realms of Classical physics: Newtonian mechanics
+                </p>
+                <div class="yulduz">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/icn%20bxs-star.png" alt="">
+                    <img src="img/_bosh.png" alt="">
+                </div>
+
+                <h5 class="miles">
+                    Regina Miles
+                </h5>
+
+                <H5 class="desinger">
+                    Designer
+                </H5>
+
+            </div>
+
+
+
+
+        </div>
+
+
+    </div>
+
+</section>
+
+<section class="newsletter">
+
+    <div class="container2">
+
+        <p class="newsletter_text">
+            Newsletter
+        </p>
+
+        <h1 class="newsletter_text2">
+            Our Popular Courses
+        </h1>
+        <p class="nrwsletter_text3">
+            Problems trying to resolve the conflict between
+            the two major realms of Classical physics: Newtonian mechanics
+        </p>
+        <form action="" method="get">
+
+            <div class="bosish">
+                <input class="bb" type="email" name="mail" id="mail" placeholder="Your Email">
+                <button class="bbbb" type="submit">Subscribe</button>
+
+
+
+            </div>
+        </form>
+
+
+
+
+
+    </div>
+
+
+
+
+</section>
+
+<section class="footer">
+
+    <div class="container">
+
+        <div class="sms">
+
+
+            <div class="info">
+
+                <p class="info1">
+                    Company Info
+                </p>
+
+                <p>
+                    About Us
+                </p>
+
+                <p>
+                    Carrier
+                </p>
+
+                <p>
+                    We are hiring
+                </p>
+
+                <p>
+                    Blog
+                </p>
+
+            </div>
+
+            <div class="info">
+
+                <p class="info1">
+                    Company Info
+                </p>
+
+                <p>
+                    About Us
+                </p>
+
+                <p>
+                    Carrier
+                </p>
+
+                <p>
+                    We are hiring
+                </p>
+
+                <p>
+                    Blog
+                </p>
+
+            </div>
+
+            <div class="info">
+
+                <p class="info1">
+                    Company Info
+                </p>
+
+                <p>
+                    About Us
+                </p>
+
+                <p>
+                    Carrier
+                </p>
+
+                <p>
+                    We are hiring
+                </p>
+
+                <p>
+                    Blog
+                </p>
+
+            </div>
+
+            <div class="info">
+
+                <p class="info1">
+                    Company Info
+                </p>
+
+                <p>
+                    About Us
+                </p>
+
+                <p>
+                    Carrier
+                </p>
+
+                <p>
+                    We are hiring
+                </p>
+
+                <p>
+                    Blog
+                </p>
+
+            </div>
+
+            <div class="touch">
+
+                <p class="info1">
+                    Company Info
+                </p>
+
+                <div class="ichki">
+
+                    <ul class="licha">
+
+                        <li class="li1">
+                            <img  class="rasmcha" src="img/bx_bx-phone.png" alt="">
+
+                            <p>
+                                +998932880422
+                            </p>
+
+                        </li>
+
+                        <li class="li1">
+
+                            <img class="rasmcha" src="img/bx_bx-map.png" alt="">
+
+                            <p>
+                                Buxoro vil. Qorako'l tumani,UZTelecom
+                            </p>
+                        </li>
+
+                        <li class="li1">
+
+                            <img  class="rasmcha" src="img/Vector%20cmc.png" alt="">
+
+                            <p>
+                                jorayevshahzodbek1@gmail.com
+                            </p>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+
+    <div class="container">
+
+        <div class="kkk">
+
+            <p>
+                Made With Love By Figmaland All Right Reserved
+
+            </p>
+
+            <div class="sss">
+
+                <img  class="qush" src=" img/facebook%20sec-.png" alt="">
+
+                <img  class="qush" src=" img/ant-design_instagram-outlined.png" alt="">
+
+                <img class="qush" src=" img/twitter%20sec-.png" alt="">
+
+            </div>
+
+
+        </div>
+
+
+    </div>
+
+
+
+
+</section>
 
 
 </body>
