--- a/figma1.html
+++ b/figma1.html
@@ -263,7 +263,7 @@
                 <div class="item-bottom">
 
                     <div class="item-rating">
-                        <a href="">Books Liberary</a>
+                        <a href="">training Courses</a>
 
                         <div class="star">
                             <img src="img/icon%20emojione-star.png" alt="">
@@ -272,7 +272,7 @@
                     </div>
 
                     <h5 class="item-title">
-                        Our Experts Teacher
+                        Watch our Courses
                     </h5>
 
                     <p class="item-text">
@@ -328,7 +328,7 @@
                 <div class="item-bottom">
 
                     <div class="item-rating">
-                        <a href="">Books Liberary</a>
+                        <a href="">Expert </a>
 
                         <div class="star">
                             <img src="img/icon%20emojione-star.png" alt="">
@@ -337,7 +337,7 @@
                     </div>
 
                     <h5 class="item-title">
-                        Our Experts Teacher
+                        Watch our Courses
                     </h5>
 
                     <p class="item-text">
@@ -393,7 +393,7 @@
                 <div class="item-bottom">
 
                     <div class="item-rating">
-                        <a href="">Books Liberary</a>
+                        <a href="">Training Courses</a>
 
                         <div class="star">
                             <img src="img/icon%20emojione-star.png" alt="">
@@ -402,7 +402,7 @@
                     </div>
 
                     <h5 class="item-title">
-                        Our Experts Teacher
+                        Quality Education
                     </h5>
 
                     <p class="item-text">
@@ -506,11 +506,28 @@
                 </li>
 
                 <li class="features-item">
-                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
                     <p class="features_item-text">
                         Unlimited product updates
                     </p>
                 </li>
+
+                <l1 class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        1GB  Cloud storage
+                    </p>
+                </l1>
+
+                <l1 class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        Email and community
+                        support
+
+                    </p>
+                </l1>
+
 
             </ul>
 
@@ -576,11 +593,29 @@
                 </li>
 
                 <li class="features-item">
-                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
                     <p class="features_item-text">
                         Unlimited product updates
                     </p>
                 </li>
+
+
+                <l1 class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        1GB  Cloud storage
+                    </p>
+                </l1>
+
+                <l1 class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        Email and community
+                        support
+
+                    </p>
+                </l1>
+
 
             </ul>
 
@@ -647,11 +682,29 @@
                 </li>
 
                 <li class="features-item">
-                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <img class="features-item_icon" src="img/circle.png" alt="">
                     <p class="features_item-text">
                         Unlimited product updates
                     </p>
                 </li>
+
+
+                <l1 class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        1GB  Cloud storage
+                    </p>
+                </l1>
+
+                <l1 class="features-item">
+                    <img class="features-item_icon" src="img/corni%20beli.png" alt="">
+                    <p class="features_item-text">
+                        Email and community
+                        support
+
+                    </p>
+                </l1>
+
 
             </ul>
 
@@ -826,7 +879,7 @@
             <div class="info">
 
                 <p class="info1">
-                    Company Info
+                    Legal
                 </p>
 
                 <p>
@@ -850,23 +903,23 @@
             <div class="info">
 
                 <p class="info1">
-                    Company Info
+                    Features
                 </p>
 
                 <p>
-                    About Us
+                    Business Marketing
                 </p>
 
                 <p>
-                    Carrier
+                    User Analytic
                 </p>
 
                 <p>
-                    We are hiring
+                    Live Chat
                 </p>
 
                 <p>
-                    Blog
+                    Unlimited Support
                 </p>
 
             </div>
@@ -874,23 +927,23 @@
             <div class="info">
 
                 <p class="info1">
-                    Company Info
+                    Resources
                 </p>
 
                 <p>
-                    About Us
+                    IOS & Android
                 </p>
 
                 <p>
-                    Carrier
+                    Watch a Demo
                 </p>
 
                 <p>
-                    We are hiring
+                    Customers
                 </p>
 
                 <p>
-                    Blog
+                    API
                 </p>
 
             </div>
